Resolves #175.